--- a/kitools/css/options.css
+++ b/kitools/css/options.css
@@ -1,9 +1,15 @@
+/**
+ *
+ *  Title  : Auto Login for Student Portal
+ *  Author : tknhs
+ *
+ **/
 
 body {
   padding: 10px 50px;
 }
 
-label,input {
+label,input[type='text'],input[type='password'] {
   display: block;
   width: 100px;
   float: left;
@@ -23,5 +29,59 @@ fieldset {
 
 #registered p {
   text-align: center;
+}
+
+/* タブ */
+.tab_content {
+  padding: 20px;
+}
+ul.tab {
+  margin: 0;
+  padding: 0;
+  border-bottom: 2px #ddd solid;
+}
+ul.tab li {
+  float: left;
+  margin: 0 0 0 5px;
+  position: relative;
+  bottom: -2px;
+  list-style-type: none;
+  border: 1px #ddd solid;
+  border-top: none;
+  border-bottom: 2px #ddd solid;
+}
+ul.tab li.none {
+  border-bottom: 2px #fff solid;
+  font-weight: bold;
+}
+ul.tab li a {
+  color: #000;
+  display: block;
+  padding: 3px 10px 5px;
+  text-decoration: none;
+  background: #fff;
+}
+ul.tab li a.green {
+  border-top: 5px #4cbb47 solid;
+}
+ul.tab li a.red {
+  border-top: 5px #dd1d25 solid;
+}
+ul.tab li a.yellow {
+  border-top: 5px #ffd242 solid;
+}
+ul.tab li a:hover {
+  position: relative;
+  bottom: 6px;
+}
+/* clerfix */
+.clear:after {
+  content:"";
+  display:block;
+  overflow:hidden;
+  clear: both;
+}
+.clear {
+  zoom:1;
 }
 
