設定ページ ・[バス]タブを追加 ・出発号館を選択できるようになった シャトルバス時刻日程表 ・やつかほ→扇が丘時，設定ページで選択した出発号館の出発時刻を表示 シャトルバス通知 ・設定ページで選択した出発号館の出発時刻と到着時刻を表示

--- a/kitools/css/options.css
+++ b/kitools/css/options.css
@@ -27,7 +27,7 @@ br {
 fieldset {
   width: 450px;
 }
-fieldset.field_general{
+fieldset.field_general, fieldset.field_bus, #b_registered{
   width: 550px;
 }
 fieldset.field_portal label, fieldset.field_vpn label{
@@ -83,6 +83,9 @@ ul.tab li a.red {
 }
 ul.tab li a.yellow {
   border-top: 5px #ffd242 solid;
+}
+ul.tab li a.blue {
+  border-top: 5px #1E90FF solid;
 }
 /* clerfix */
 .clear:after {
