--- a/amalin/css/amalin.css
+++ b/amalin/css/amalin.css
@@ -8,7 +8,7 @@
 /* amalinで作成したDOM */
 .amalin, .amalin-affi {
   margin: 10px 0px;
-  font-family: 'メイリオ', Meiryo, sans-serif;
+  font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
   font-size: 125%;
   color: #990012;
 }
