--- a/bus/assets/css/options.css
+++ b/bus/assets/css/options.css
@@ -1,4 +1,5 @@
 body {
+  font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
   background-color: #e8d3c7; /* haiume */
 }
 label {
