--- a/bus/assets/css/popup.css
+++ b/bus/assets/css/popup.css
@@ -1,6 +1,6 @@
 body {
+  font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
   min-width: 400px;
-  font-family: 'メイリオ', Meiryo, sans-serif;
   background-color: #e8d3c7;
 }
 
