--- a/login/assets/css/options.css
+++ b/login/assets/css/options.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'メイリオ', Meiryo, sans-serif;
+  font-family:'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', Meiryo, メイリオ, sans-serif;
   background-color: #e8d3c7; /* haiume */
 }
 label.col-lg-5.control-label {
