--- a/pnc/assets/css/content.css
+++ b/pnc/assets/css/content.css
@@ -1,3 +1,14 @@
+/* 共通告知 */
+button.pnc_common-kokuchi {
+  border-radius: 5px;
+  background: #e6e6e6;
+  padding: 2px 10px 2px 10px;
+}
+button.pnc_common-kokuchi:hover {
+  background: #adadad;
+}
+
+/* 学科連絡 */
 label.pnc_label {
   color: #000;
   padding: 10px;
