ポータル告知クリーナー     再表示ボタンのUI設定のし忘れ

--- a/pnc/assets/css/content.css
+++ b/pnc/assets/css/content.css
@@ -1,10 +1,10 @@
 /* 共通告知 */
-button.pnc_common-kokuchi, button.pnc-delete {
+button.pnc_common-kokuchi, button.pnc-delete, button.pnc_common-kokuchi-display {
   border-radius: 5px;
   background: #e6e6e6;
   padding: 2px 10px 2px 10px;
 }
-button.pnc_common-kokuchi:hover, button.pnc-delete:hover {
+button.pnc_common-kokuchi:hover, button.pnc-delete:hover, button.pnc_common-kokuchi-display {
   background: #adadad;
 }
 
