--- a/amalin/css/amalin.css
+++ b/amalin/css/amalin.css
@@ -36,9 +36,70 @@
 .amalin-sub {
   font-size: 80%;
 }
-.amalin-sub1 {
+.amalin-sub1, button.amalin-bil-lend-1 {
   color: blue;
 }
-.amalin-sub2 {
+.amalin-sub2, button.amalin-bil-lend-0 {
   color: red;
+}
+
+p#sb-slidebar {
+  background-color: rgb(255, 69, 0);
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  text-align: right;
+  font-size: 20px;
+  z-index: 9999;
+  width: 50px;
+  height: 50px;
+  margin: 0px;
+  padding: 0px;
+  min-height: 0px;
+  opacity: 0.7;
+  display: block;
+  cursor: pointer;
+}
+
+div#amalin-bil {
+  padding: 15px;
+}
+div.amalin-bil-div {
+  padding: 5px;
+}
+a.amalin-bil-a:link {
+  color: white;
+  font-size: 18px;
+  text-decoration: none
+}
+a.amalin-bil-a:visited {
+  color: white;
+}
+a.amalin-bil-a:hover {
+  color: gray;
+}
+
+div.amalin-borrow {
+  text-align: center;
+  margin-top: 10px;
+}
+button.amalin-bil-lend, button.amalin-borrow-it-later-delete, button.amalin-borrow-it-later {
+  display:inline;
+  border: none;
+  border-radius: 5px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  padding: 5px 15px;
+  text-align: center;
+  font-size: 80%;
+  font-weight: bold;
+
+}
+button.amalin-borrow-it-later-delete {
+  background: #FF6347;
+  color: #F5F5F5;
+}
+button.amalin-borrow-it-later {
+  background: #66CDAA;
+  color: #F5F5F5;
 }
